@@ -35,12 +35,6 @@ public class ConvertToSwitchPatternInstanceOfTest extends NbTestCase {
     
     @Test
     public void testSimple() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_17"); //NOI18N
-        } catch (IllegalArgumentException ex) {
-            //OK, no RELEASE_17, skip tests
-            return;
-        }
         HintTest.create()
                 .input("package test;\n"
                         + "public class Test {\n"
@@ -58,8 +52,7 @@ public class ConvertToSwitchPatternInstanceOfTest extends NbTestCase {
                         + "    }\n"
                         + "}\n"
                 )
-                .sourceLevel("17")
-                .options("--enable-preview")
+                .sourceLevel("21")
                 .run(ConvertToSwitchPatternInstanceOf.class)
                 .findWarning("3:8-3:10:verifier:" + Bundle.ERR_ConvertToSwitchPatternInstanceOf())
                 .applyFix()
@@ -79,12 +72,6 @@ public class ConvertToSwitchPatternInstanceOfTest extends NbTestCase {
     
     @Test
     public void testSimpleNoHint() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_17"); //NOI18N
-        } catch (IllegalArgumentException ex) {
-            //OK, no RELEASE_17, skip tests
-            return;
-        }
         HintTest.create()
                 .input("package test;\n"
                         + "public class Test {\n"
@@ -103,19 +90,12 @@ public class ConvertToSwitchPatternInstanceOfTest extends NbTestCase {
                         + "}\n"
                 )
                 .sourceLevel("17")
-                .options("--enable-preview")
                 .run(ConvertToSwitchPatternInstanceOf.class)
                 .assertNotContainsWarnings(Bundle.ERR_ConvertToSwitchPatternInstanceOf());
     }
     
     @Test
     public void testSimplePatternMatch() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_17");
-        } catch (IllegalArgumentException ex) {
-            //OK, skip test
-            return;
-        }
         HintTest.create()
                 .input("package test;\n"
                         + "public class Test {\n"
@@ -133,8 +113,7 @@ public class ConvertToSwitchPatternInstanceOfTest extends NbTestCase {
                         + "        return formatted;\n"
                         + "    }"
                         + "}\n")
-                .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
+                .sourceLevel("21")
                 .run(ConvertToSwitchPatternInstanceOf.class)
                 .findWarning("4:8-4:10:verifier:" + Bundle.ERR_ConvertToSwitchPatternInstanceOf())
                 .applyFix()
@@ -158,12 +137,6 @@ public class ConvertToSwitchPatternInstanceOfTest extends NbTestCase {
     
     @Test
     public void testSimplePatternMatchNoHint() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_17");
-        } catch (IllegalArgumentException ex) {
-            //OK, skip test
-            return;
-        }
         HintTest.create()
                 .input("package test;\n"
                         + "public class Test {\n"
@@ -181,20 +154,13 @@ public class ConvertToSwitchPatternInstanceOfTest extends NbTestCase {
                         + "        return formatted;\n"
                         + "    }"
                         + "}\n")
-                .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
+                .sourceLevel("21")
                 .run(ConvertToSwitchPatternInstanceOf.class)
                 .assertNotContainsWarnings(Bundle.ERR_ConvertToSwitchPatternInstanceOf());
     }
 
     @Test
     public void testSimpleSwitchWithNull() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_17");
-        } catch (IllegalArgumentException ex) {
-            //OK, skip test
-            return;
-        }
         HintTest.create()
                 .input("package test;\n"
                         + "public class Test {\n"
@@ -217,8 +183,7 @@ public class ConvertToSwitchPatternInstanceOfTest extends NbTestCase {
                         + "        return formatted;\n"
                         + "    }"
                         + "}\n")
-                .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
+                .sourceLevel("21")
                 .run(ConvertToSwitchPatternInstanceOf.class)
                 .findWarning("4:8-4:24:verifier:" + Bundle.ERR_ConvertToSwitchPatternInstanceOf())
                 .applyFix()
@@ -247,12 +212,6 @@ public class ConvertToSwitchPatternInstanceOfTest extends NbTestCase {
     
     @Test
     public void testSimpleSwitchWithNullNoHint() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_17");
-        } catch (IllegalArgumentException ex) {
-            //OK, skip test
-            return;
-        }
         HintTest.create()
                 .input("package test;\n"
                         + "public class Test {\n"
@@ -275,20 +234,13 @@ public class ConvertToSwitchPatternInstanceOfTest extends NbTestCase {
                         + "        return formatted;\n"
                         + "    }"
                         + "}\n")
-                .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
+                .sourceLevel("21")
                 .run(ConvertToSwitchPatternInstanceOf.class)
                 .assertNotContainsWarnings(Bundle.ERR_ConvertToSwitchPatternInstanceOf());
     }
 
     @Test
     public void testSingleStatementsStaticVariable() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_17");
-        } catch (IllegalArgumentException ex) {
-            //OK, skip test
-            return;
-        }
         HintTest.create()
                 .input("package test;\n"
                         + "public class Test {\n"
@@ -312,8 +264,7 @@ public class ConvertToSwitchPatternInstanceOfTest extends NbTestCase {
                         + "class Test2{\n"
                         + "     public static Object a;\n"
                         + "}")
-                .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
+                .sourceLevel("21")
                 .run(ConvertToSwitchPatternInstanceOf.class)
                 .findWarning("4:8-4:10:verifier:" + Bundle.ERR_ConvertToSwitchPatternInstanceOf())
                 .applyFix()
@@ -342,12 +293,6 @@ public class ConvertToSwitchPatternInstanceOfTest extends NbTestCase {
 
     @Test
     public void testMultipleStatements() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_17");
-        } catch (IllegalArgumentException ex) {
-            //OK, skip test
-            return;
-        }
         HintTest.create()
                 .input("package test;\n"
                         + "public class Test {\n"
@@ -372,8 +317,7 @@ public class ConvertToSwitchPatternInstanceOfTest extends NbTestCase {
                         + "        return -1;\n"
                         + "    }"
                         + "}\n")
-                .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
+                .sourceLevel("21")
                 .run(ConvertToSwitchPatternInstanceOf.class)
                 .findWarning("4:8-4:10:verifier:" + Bundle.ERR_ConvertToSwitchPatternInstanceOf())
                 .applyFix()
@@ -407,12 +351,6 @@ public class ConvertToSwitchPatternInstanceOfTest extends NbTestCase {
 
     @Test
     public void testEmptyStatementsMethodInvocation() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_17");
-        } catch (IllegalArgumentException ex) {
-            //OK, skip test
-            return;
-        }
         HintTest.create()
                 .input("package test;\n"
                         + "public class Test {\n"
@@ -436,8 +374,7 @@ public class ConvertToSwitchPatternInstanceOfTest extends NbTestCase {
                         + "         return \"method invocation\";\n"
                         + "     }"
                         + "}")
-                .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
+                .sourceLevel("21")
                 .run(ConvertToSwitchPatternInstanceOf.class)
                 .findWarning("4:8-4:10:verifier:" + Bundle.ERR_ConvertToSwitchPatternInstanceOf())
                 .applyFix()
